--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>André</title>
   </head>
   <body>
@@ -19,5 +19,15 @@
         </ul>
       </nav>
     </header>
+
+    <main class="introducao">
+      <img src="./img/perfil.jpg" alt="Lobo cinza" />
+
+      <div class="conteudo">
+        <h1>Desenvolvedor <br> Front End & <br> UX/UI Designer</h1>
+
+        <p>Localizado em São Paulo</p>
+    </div>
+    </main>
   </body>
 </html>
