--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,90 @@
       </nav>
     </header>
 
-    <main class="introducao">
+    <main class="container introducao">
       <img src="./img/perfil.jpg" alt="Lobo cinza" />
 
       <div class="conteudo">
-        <h1>Desenvolvedor <br> Front End & <br> UX/UI Designer</h1>
+        <h1>
+          Desenvolvedor <br />
+          Front End & <br />
+          UX/UI Designer
+        </h1>
 
         <p>Localizado em São Paulo</p>
-    </div>
+      </div>
     </main>
+
+    <section
+      aria-label="Experiência"
+      id="experiencia"
+      class="container experiencia"
+    >
+      <h2 class="subtitulo">Experiência</h2>
+
+      <div>
+        <p class="experiencia-texto">
+          Desenvolvo pequenos projetos como o Bikcraft utilizando apenas
+          <strong>HTML</strong>, <strong>CSS</strong> e
+          <strong>JavaScript</strong>. Para aplicativos web como a rede social
+          Dogs eu trabalhei no <strong>UX</strong> e <strong>UI</strong> Design
+          do projeto.
+        </p>
+
+        <div class="empresa">
+          <span class="empresa-ano">2045</span>
+          <h3 class="empresa-titulo">Bikcraft</h3>
+          <span class="empresa-titulo">Desenvolvedor Junior</span>
+          <p class="empresa-texto">
+            Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML,
+            CSS e JavaScript. Para aplicativos web como a rede social Dogs.
+          </p>
+
+          <ul class="empresa-habilidades">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>UX Design</li>
+            <li>UI Design</li>
+          </ul>
+        </div>
+
+        <div class="empresa">
+          <span class="empresa-ano">2045</span>
+          <h3 class="empresa-titulo">Bikcraft</h3>
+          <span class="empresa-titulo">Desenvolvedor Junior</span>
+          <p class="empresa-texto">
+            Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML,
+            CSS e JavaScript. Para aplicativos web como a rede social Dogs.
+          </p>
+
+          <ul class="empresa-habilidades">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>UX Design</li>
+            <li>UI Design</li>
+          </ul>
+        </div>
+
+        <div class="empresa">
+          <span class="empresa-ano">2045</span>
+          <h3 class="empresa-titulo">Bikcraft</h3>
+          <span class="empresa-titulo">Desenvolvedor Junior</span>
+          <p class="empresa-texto">
+            Desenvolvo pequenos projetos como o Bikcraft utilizando apenas HTML,
+            CSS e JavaScript. Para aplicativos web como a rede social Dogs.
+          </p>
+
+          <ul class="empresa-habilidades">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>UX Design</li>
+            <li>UI Design</li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
