--- a/src/index.html
+++ b/src/index.html
@@ -105,5 +105,60 @@
         </div>
       </div>
     </section>
+
+    <section class="formacao" id="formacao" aria-label="Formação">
+      <div class="container formacao-container">
+        <h2 class="subtitulo">Formação</h2>
+
+        <div>
+          <p class="formacao-texto">
+            Minha mais recente experiência acadêmica foi o
+            <strong>mestrado</strong> 🎓 que fiz no exterior em
+            <strong>UX Design</strong>. Além disso me mantenho sempre atualizado
+            com cursos intensivos online.
+          </p>
+
+          <ul class="faculdade-lista">
+            <li class="faculdade">
+              <span class="faculdade-tipo">Bacharel</span>
+              <h3 class="faculdade-curso">administrcao de Empresas</h3>
+              <span class="faculdade-instituicao">UFRRJ</span>
+            </li>
+
+            <li class="faculdade">
+              <span class="faculdade-tipo">Bacharel</span>
+              <h3 class="faculdade-curso">administrcao de Empresas</h3>
+              <span class="faculdade-instituicao">UFRRJ</span>
+            </li>
+
+            <li class="faculdade">
+              <span class="faculdade-tipo">Bacharel</span>
+              <h3 class="faculdade-curso">administrcao de Empresas</h3>
+              <span class="faculdade-instituicao">UFRRJ</span>
+            </li>
+          </ul>
+
+          <div class="formacao-extra">
+            <div class="cursos">
+              <h3>Cursos Intensivos</h3>
+
+              <ul>
+                <li>UX / UI Design <span>56h</span></li>
+                <li>Frontend <span>72h</span></li>
+              </ul>
+            </div>
+
+            <div class="idiomas">
+              <h3>Idiomas</h3>
+
+              <ul>
+                <li>Ingles <span>/ Fluente</span></li>
+                <li>Espanhol <span>/ Intermediario</span></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
