--- a/src/index.html
+++ b/src/index.html
@@ -160,5 +160,21 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer" id="contato">
+      <div class="container footer-container">
+        <p class="footer-texto">
+          Estou disponível para novos projetos no momento. Entre em contato
+          comigo e marcamos uma conversa 👋
+        </p>
+
+        <ul class="footer-contato">
+          <li>carvalho.devel@gmail.com</li>
+          <li>+55 (11) 94924-5875</li>
+        </ul>
+
+        <p class="footer-copy">Carvalho Devel. Alguns direitos reservados.</p>
+      </div>
+    </footer>
   </body>
 </html>
