--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Site Feito por André Lite Carvalho" />
 
     <link rel="stylesheet" href="./css/styles.css" />
     <title>André</title>
   </head>
   <body>
     <header class="header">
-      <img src="./img/marca.svg" alt="Logo" />
+      <img src="./img/marca.svg" alt="Logo" width="104" height="38" />
 
       <nav>
         <ul class="header-menu">
@@ -21,7 +22,12 @@
     </header>
 
     <main class="container introducao">
-      <img src="./img/perfil.jpg" alt="Lobo cinza" />
+      <img
+        src="./img/perfil.jpg"
+        alt="Lobo cinza"
+        width="360px"
+        height="520px"
+      />
 
       <div class="conteudo">
         <h1>
