--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,11 @@
     <meta name="description" content="Site Feito por André Lite Carvalho" />
 
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    
     <title>André</title>
   </head>
   <body>
