--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -10,7 +10,22 @@
       content="Bicicletas elétricas de alta procisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
 
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header class="header-bg">
+      <div class="header">
+        <a href="./"><img src="./assets/bikcraft.svg" alt="Bikcraft" /></a>
+
+        <nav aria-label="primary">
+          <ul class="header-menu">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contatos.html">Contatos</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
