--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -27,5 +27,24 @@
         </nav>
       </div>
     </header>
+
+    <main class="introduction-bg">
+      <div class="introduction">
+        
+        <div class="introduction-content">
+            <h1>Biciletas feitas sob medida.</h1>
+            <p>
+              Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+              para você. Explore o mundo na sua velocidade.
+            </p>
+            <a href="./bicletas.html">Escolha a sua</a>
+        </div>
+
+        <img
+          src="./assets/fotos/introducao.jpg"
+          alt="Bicicleta elétrica preta."
+        />
+      </div>
+    </main>
   </body>
 </html>
