feature: created home content

--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -32,18 +32,21 @@
       <div class="introduction">
         
         <div class="introduction-content">
-            <h1>Biciletas feitas sob medida.</h1>
+            <h1>Biciletas feitas sob medida<span>.</span></h1>
             <p>
               Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
               para você. Explore o mundo na sua velocidade.
             </p>
+            
             <a href="./bicletas.html">Escolha a sua</a>
         </div>
 
-        <img
-          src="./assets/fotos/introducao.jpg"
-          alt="Bicicleta elétrica preta."
-        />
+        <div>
+          <img
+            src="./assets/fotos/introducao.jpg"
+            alt="Bicicleta elétrica preta."
+          />
+        </div>
       </div>
     </main>
   </body>
