feature: update css typographys

--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -19,7 +19,7 @@
         <a href="./"><img src="./assets/bikcraft.svg" alt="Bikcraft" /></a>
 
         <nav aria-label="primary">
-          <ul class="header-menu color-0">
+          <ul class="header-menu color-0 ty-1-m">
             <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contatos.html">Contatos</a></li>
@@ -31,11 +31,11 @@
     <main class="introduction-bg">
       <div class="introduction">
         <div class="introduction-content">
-          <h1 class="typography-bg color-0">
+          <h1 class="ty-1-xxl color-0">
             Biciletas feitas sob medida<span>.</span>
           </h1>
           
-          <p class="typography-md color-5">
+          <p class="ty-2-l color-5">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para você. Explore o mundo na sua velocidade.
           </p>
@@ -52,6 +52,6 @@
       </div>
     </main>
 
-    <h2 class="typography-bg">escolha a sua <span class="color-p1">.</span></h2>
+    <h2 class="ty-1-xxl">escolha a sua <span class="color-p1">.</span></h2>
   </body>
 </html>
