--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -111,7 +111,7 @@
           </p>
 
           <a class="link" href="./bicicletas.html">Escolha um modelo</a>
-          
+
           <div class="technology-benefits">
             <div>
               <img src="./assets/icones/eletrica.svg" alt="" />
@@ -138,5 +138,22 @@
         </div>
       </div>
     </article>
+
+    <section class="partners" aria-label="Nossos parceiros">
+      <h2 class="ty-1-xxl container">
+        nossos parceiros <span class="color-p1">.</span>
+      </h2>
+
+      <ul>
+        <li><img src="./assets/parceiros/caravan.svg" alt="caravan" /></li>
+        <li><img src="./assets/parceiros/dogs.svg" alt="dogs" /></li>
+        <li><img src="./assets/parceiros/flexblog.svg" alt="flexblog" /></li>
+        <li><img src="./assets/parceiros/handel.svg" alt="handel" /></li>
+        <li><img src="./assets/parceiros/lescone.svg" alt="lescone" /></li>
+        <li><img src="./assets/parceiros/ranek.svg" alt="ranek" /></li>
+        <li><img src="./assets/parceiros/surfbot.svg" alt="surfbot" /></li>
+        <li><img src="./assets/parceiros/wildbeast.svg" alt="wildbeast" /></li>
+      </ul>
+    </section>
   </body>
 </html>
