--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -155,5 +155,26 @@
         <li><img src="./assets/parceiros/wildbeast.svg" alt="wildbeast" /></li>
       </ul>
     </section>
+
+    <section class="testimony" aria-label="Depoimento">
+      <div>
+        <img
+          src="./assets/fotos/depoimento.jpg"
+          alt="Pessoa pedalando uma bicicleta Bikcraft"
+        />
+      </div>
+
+      <div class="testimony-content">
+        <blockquote class="ty-1-xl color-p5">
+          <p>
+            Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez
+            foi intensificar o meu amor por esta atividade. Recomendo à todos
+            que amo.
+          </p>
+
+          <span class="ty-1-m-b color-p4">Ana Júlia</span>
+        </blockquote>
+      </div>
+    </section>
   </body>
 </html>
