--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -218,5 +218,55 @@
         </div>
       </div>
     </article>
+
+    <footer class="footer-bg">
+      <div class="footer container">
+        <img src="./assets/bikcraft.svg" alt="Bikcraft" />
+
+        <div class="footer-contact">
+          <h3 class="ty-2-l-b color-0">Contato</h3>
+
+          <ul class="ty-2-m color-5">
+            <li><a href="tel:+55 11 9 49245875">+55 11 9 4924-5875</a></li>
+            <li>
+              <a href="mailto:carvalho.devel@gmail.com"
+                >carvalho.devel@gmail.com</a
+              >
+            </li>
+            <li>Rua Ali Perto, 40 - Botafogo</li>
+            <li>Rio de Janeiro - RJ</li>
+          </ul>
+
+          <div class="footer-social">
+            <a href="">
+              <img src="./assets/redes/facebook.svg" alt="facebook" />
+            </a>
+            <a href="">
+              <img src="./assets/redes/instagram.svg" alt="instagram" />
+            </a>
+            <a href="">
+              <img src="./assets/redes/youtube.svg" alt="youtube" />
+            </a>
+          </div>
+        </div>
+
+        <div class="footer-informations">
+          <h3 class="ty-2-l-b color-0">Informações</h3>
+
+          <nav>
+            <ul class="ty-1-m color-5">
+              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./seguros.html">Seguros</a></li>
+              <li><a href="./contatos.html">Contatos</a></li>
+              <li><a href="./termos.html">Termos e Condições de uso</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <p class="footer-copy ty-2-m color-6">
+          Bikcraft © Alguns direitos reservados.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
