--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -258,7 +258,7 @@
               <li><a href="./bicicletas.html">Bicicletas</a></li>
               <li><a href="./seguros.html">Seguros</a></li>
               <li><a href="./contatos.html">Contatos</a></li>
-              <li><a href="./termos.html">Termos e Condições de uso</a></li>
+              <li><a href="./terms.html">Termos e Condições de uso</a></li>
             </ul>
           </nav>
         </div>
