feature: Bicycles page

--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -20,7 +20,7 @@
 
         <nav aria-label="primary">
           <ul class="header-menu color-0 ty-1-m">
-            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./bicycles.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contatos.html">Contatos</a></li>
           </ul>
@@ -110,7 +110,7 @@
             completamente as suas cores.
           </p>
 
-          <a class="link" href="./bicicletas.html">Escolha um modelo</a>
+          <a class="link" href="./bicycles.html">Escolha um modelo</a>
 
           <div class="technology-benefits">
             <div>
@@ -255,7 +255,7 @@
 
           <nav>
             <ul class="ty-1-m color-5">
-              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./bicycles.html">Bicicletas</a></li>
               <li><a href="./seguros.html">Seguros</a></li>
               <li><a href="./contatos.html">Contatos</a></li>
               <li><a href="./terms.html">Termos e Condições de uso</a></li>
