--- a/bikcraft-final/terms.html
+++ b/bikcraft-final/terms.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
 
-  <body>
+  <body id="terms">
     <header class="header-bg">
       <div class="header container">
         <a href="./"><img src="./assets/bikcraft.svg" alt="Bikcraft" /></a>
