--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -21,7 +21,7 @@
         <nav aria-label="primary">
           <ul class="header-menu color-0 ty-1-m">
             <li><a href="./bicycles.html">Bicicletas</a></li>
-            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./insurance.html">Seguros</a></li>
             <li><a href="./contatos.html">Contatos</a></li>
           </ul>
         </nav>
@@ -256,7 +256,7 @@
           <nav>
             <ul class="ty-1-m color-5">
               <li><a href="./bicycles.html">Bicicletas</a></li>
-              <li><a href="./seguros.html">Seguros</a></li>
+              <li><a href="./insurance.html">Seguros</a></li>
               <li><a href="./contatos.html">Contatos</a></li>
               <li><a href="./terms.html">Termos e Condições de uso</a></li>
             </ul>
