feature: start nimbus bicycle

--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -59,7 +59,7 @@
 
       <ul>
         <li>
-          <a href="./biciletas/magic.html">
+          <a href="./bicycles/magic.html">
             <img
               src="./assets/bicicletas/magic-home.jpg"
               alt="Bicicleta elétrica preta."
@@ -70,7 +70,7 @@
         </li>
 
         <li>
-          <a href="./biciletas/nimbus.html">
+          <a href="./bicycles/nimbus.html">
             <img
               src="./assets/bicicletas/nimbus-home.jpg"
               alt="Bicicleta elétrica preta."
@@ -81,7 +81,7 @@
         </li>
 
         <li>
-          <a href="./biciletas/nebula.html">
+          <a href="./bicycles/nebula.html">
             <img
               src="./assets/bicicletas/nebula-home.jpg"
               alt="Bicicleta elétrica preta."
