feture: bicycles secure

--- a/bikcraft-final/bicycles.html
+++ b/bikcraft-final/bicycles.html
@@ -17,9 +17,9 @@
 
         <nav aria-label="primary">
           <ul class="header-menu color-0 ty-1-m">
-            <li><a href="./bicicletas.html">Bicicletas</a></li>
-            <li><a href="./seguros.html">Seguros</a></li>
-            <li><a href="./contatos.html">Contatos</a></li>
+            <li><a href="./bicycles.html">Bicicletas</a></li>
+            <li><a href="./insurance.html">Seguros</a></li>
+            <li><a href="./contact.html">Contatos</a></li>
           </ul>
         </nav>
       </div>
@@ -70,7 +70,7 @@
             </li>
           </ul>
 
-          <a href="./bicycles.html/nimbus.html" class="button send"
+          <a href="./bicycles/nimbus.html" class="button send"
             >Mais sobre</a
           >
         </div>
@@ -112,7 +112,7 @@
               </li>
             </ul>
 
-            <a href="./bicycles.html/nimbus.html" class="button send"
+            <a href="./bicycles/magic.html" class="button send"
               >Mais sobre</a
             >
           </div>
@@ -154,7 +154,7 @@
             </li>
           </ul>
 
-          <a href="./bicycles.html/nebula.html" class="button send"
+          <a href="./bicycles/nebula.html" class="button send"
             >Mais sobre</a
           >
         </div>
