--- a/bikcraft-final/bicycles/magic.html
+++ b/bikcraft-final/bicycles/magic.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bikcraft - Nimbus</title>
+    <title>Bikcraft - Magic</title>
 
-    <meta name="decription" content="Nimbus." />
+    <meta name="decription" content="Magic." />
 
     <link rel="stylesheet" href="../styles/index.css" />
   </head>
@@ -27,22 +27,22 @@
 
     <main class="title-bg">
       <div class="title container">
-        <p class="ty-2-xl color-5">R$ 4.999,00</p>
+        <p class="ty-2-xl color-5">R$ 2.499,00</p>
         <h1 class="ty-1-l-xxl color-0">
-          Nimbus Stark<span class="color-p1">.</span>
+          Magic Might<span class="color-p1">.</span>
         </h1>
       </div>
 
       <div class="bicycle container">
         <div class="bicycle-images">
-          <img src="../assets/bicicleta/nimbus1.jpg" alt="" />
           <img src="../assets/bicicleta/nimbus2.jpg" alt="" />
+          <img src="../assets/bicicleta/nimbus1.jpg" alt="" />
           <img src="../assets/bicicleta/nimbus3.jpg" alt="" />
         </div>
 
         <div class="bicycle-content">
           <p class="ty-2-l color-5">
-            A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+            A Magic Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
             vem equipada com os melhores acessórios, o que garante maior
             velocidade.
           </p>
@@ -69,7 +69,7 @@
             </li>
             <li>
               <img src="../assets/icones/velocidade.svg" alt="" />
-              <h3 class="ty-1-m color-0">50 km/h</h3>
+              <h3 class="ty-1-m color-0">45 km/h</h3>
               <p class="ty-2-xs color-5">
                 A mais rápida bicicleta elétrica disponível hoje no mercado.
               </p>
@@ -108,13 +108,13 @@
 
       <ul>
         <li>
-          <a href="../bicycles/magic.html">
+          <a href="../bicycles/nimbus.html">
             <img
-              src="../assets/bicicletas/magic.jpg"
+              src="../assets/bicicletas/nimbus.jpg"
               alt="Bicicleta elétrica preta."
             />
-            <h3 class="ty-1-xl">Magic Might</h3>
-            <span class="ty-2-m color-8">R$ 2.499,00</span>
+            <h3 class="ty-1-xl">Nimbus Stark</h3>
+            <span class="ty-2-m color-8">R$ 4.999,00</span>
           </a>
         </li>
 
