--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -22,7 +22,7 @@
           <ul class="header-menu color-0 ty-1-m">
             <li><a href="./bicycles.html">Bicicletas</a></li>
             <li><a href="./insurance.html">Seguros</a></li>
-            <li><a href="./contatos.html">Contatos</a></li>
+            <li><a href="./contact.html">Contatos</a></li>
           </ul>
         </nav>
       </div>
