--- a/bikcraft-final/terms.html
+++ b/bikcraft-final/terms.html
@@ -17,9 +17,9 @@
 
         <nav aria-label="primary">
           <ul class="header-menu color-0 ty-1-m">
-            <li><a href="./bicicletas.html">Bicicletas</a></li>
-            <li><a href="./seguros.html">Seguros</a></li>
-            <li><a href="./contatos.html">Contatos</a></li>
+            <li><a href="./bicycles.html">Bicicletas</a></li>
+            <li><a href="./insurance.html">Seguros</a></li>
+            <li><a href="./contact.html">Contatos</a></li>
           </ul>
         </nav>
       </div>
