feature: contact form

--- a/bikcraft-final/insurance.html
+++ b/bikcraft-final/insurance.html
@@ -228,7 +228,7 @@
             <ul class="ty-1-m color-5">
               <li><a href="./bicicletas.html">Bicicletas</a></li>
               <li><a href="./seguros.html">Seguros</a></li>
-              <li><a href="./contatos.html">Contatos</a></li>
+              <li><a href="./contact.html">Contatos</a></li>
               <li><a href="./terms.html">Termos e Condições de uso</a></li>
             </ul>
           </nav>
