--- a/bikcraft-final/contact.html
+++ b/bikcraft-final/contact.html
@@ -78,35 +78,35 @@
             <div>
               <label for="cellphone">Telefone</label>
               <input
-                type="tel"
+                type="text"
+                name="cellphone"
                 id="cellphone"
-                cellphone="cellphone"
                 placeholder="(21) 99999-9999"
               />
             </div>
 
-            <div>
+            <div class="col-2">
               <label for="email">E-mail</label>
               <input
                 type="email"
                 id="email"
-                email="email"
+                name="email"
                 placeholder="exemplo@exemplo.com"
               />
             </div>
 
-            <div>
+            <div class="col-2">
               <label for="message">Mensagem</label>
               <textarea
+                rows="5"
                 type="text"
                 id="message"
-                message="message"
-                rows="5"
-              >
-            </textarea>
+                name="message"
+                placeholder="O que você precisa?"
+              ></textarea>
             </div>
-            
-            <button class="button">Enviar Mensagem</button>
+
+            <button class="button col-2">Enviar Mensagem</button>
           </form>
         </section>
       </div>
@@ -150,7 +150,7 @@
             <ul class="ty-1-m color-5">
               <li><a href="./bicicletas.html">Bicicletas</a></li>
               <li><a href="./seguros.html">Seguros</a></li>
-              <li><a href="./contatos.html">Contatos</a></li>
+              <li><a href="./contact.html">Contatos</a></li>
               <li><a href="./terms.html">Termos e Condições de uso</a></li>
             </ul>
           </nav>
