--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -257,7 +257,7 @@
             <ul class="ty-1-m color-5">
               <li><a href="./bicycles.html">Bicicletas</a></li>
               <li><a href="./insurance.html">Seguros</a></li>
-              <li><a href="./contatos.html">Contatos</a></li>
+              <li><a href="./contact.html">Contatos</a></li>
               <li><a href="./terms.html">Termos e Condições de uso</a></li>
             </ul>
           </nav>
