--- a/bikcraft-final/contact.html
+++ b/bikcraft-final/contact.html
@@ -112,6 +112,51 @@
       </div>
     </main>
 
+    <article class="stores container">
+      <h2 class="ty-1-xxl">lojas locais<span class="color-p1">.</span></h2>
+      <div class="stores-items">
+        <img
+          src="./assets/lojas/rj.jpg"
+          alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ"
+        />
+        <div class="stores-content">
+          <h3 class="ty-1-xl">Rio de Janeiro</h3>
+          <div class="stores-data ty-2-s color-8">
+            <p>Rua Ali Perto, 25</p>
+            <p>Rio de Janeiro - RJ</p>
+          </div>
+          <div class="stores-data ty-2-s color-8">
+            <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
+            <a href="tel:+552199999999">+55 21 9999-9999</a>
+          </div>
+          <p class="stores-tempo ty-1-s">
+            <img src="./assets/icones/horario.svg" alt="" />08-18h de seg à dom
+          </p>
+        </div>
+      </div>
+
+      <div class="stores-items">
+        <img
+          src="./assets/lojas/sp.jpg"
+          alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP"
+        />
+        <div class="stores-content">
+          <h3 class="ty-1-xl">São Paulo</h3>
+          <div class="stores-data ty-2-s color-8">
+            <p>Rua Ali Perto, 25</p>
+            <p>São Paulo - SP</p>
+          </div>
+          <div class="lojas-data ty-2-s color-8">
+            <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
+            <a href="tel:+551199999999">+55 11 9999-9999</a>
+          </div>
+          <p class="stores-tempo ty-1-s">
+            <img src="./assets/icones/horario.svg" alt="" />08-18h de seg à dom
+          </p>
+        </div>
+      </div>
+    </article>
+
     <footer class="footer-bg">
       <div class="footer container">
         <img src="./assets/bikcraft.svg" alt="Bikcraft" />
