--- a/bikcraft-final/bicycles/nimbus.html
+++ b/bikcraft-final/bicycles/nimbus.html
@@ -47,7 +47,7 @@
             velocidade.
           </p>
           <div class="bicycle-buy">
-            <a class="button" href="../orcamento.html">Comprar Agora</a>
+            <a class="button" href="../budget.html">Comprar Agora</a>
             <span class="ty-1-xs color-6"
               ><img src="../assets/icones/entrega.svg" alt="" /> entrega em 5
               dias</span
