--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -195,7 +195,7 @@
             <li>Cobertura estadual</li>
           </ul>
 
-          <a href="./orcamento.html" class="button second">Inscreva-se </a>
+          <a href="./budget.html" class="button second">Inscreva-se </a>
         </div>
 
         <div class="insurance-item">
@@ -214,7 +214,7 @@
             <li>Acesso ao Clube Bikcraft</li>
           </ul>
 
-          <a href="./orcamento.html" class="button">Inscreva-se </a>
+          <a href="./budget.html" class="button">Inscreva-se </a>
         </div>
       </div>
     </article>
