--- a/bikcraft-final/insurance.html
+++ b/bikcraft-final/insurance.html
@@ -50,7 +50,7 @@
             <li>Cobertura estadual</li>
           </ul>
 
-          <a href="./orcamento.html" class="button second">Inscreva-se </a>
+          <a href="./budget.html" class="button second">Inscreva-se </a>
         </div>
 
         <div class="insurance-item">
@@ -69,7 +69,7 @@
             <li>Acesso ao Clube Bikcraft</li>
           </ul>
 
-          <a href="./orcamento.html" class="button">Inscreva-se </a>
+          <a href="./budget.html" class="button">Inscreva-se </a>
         </div>
       </div>
     </main>
