fix: links and update images and adding details

--- a/bikcraft-final/contact.html
+++ b/bikcraft-final/contact.html
@@ -7,6 +7,7 @@
 
     <meta name="decription" content="Contato." />
 
+      <link rel="preload" href="./styles/index.css" as="style">
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
 
@@ -193,7 +194,7 @@
 
           <nav>
             <ul class="ty-1-m color-5">
-              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./bicycles.html">Bicicletas</a></li>
               <li><a href="./seguros.html">Seguros</a></li>
               <li><a href="./contact.html">Contatos</a></li>
               <li><a href="./terms.html">Termos e Condições de uso</a></li>
