--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -10,13 +10,20 @@
       content="Bicicletas elétricas de alta procisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
 
+    <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
 
   <body>
     <header class="header-bg">
       <div class="header container">
-        <a href="./"><img src="./assets/bikcraft.svg" alt="Bikcraft" /></a>
+        <a href="./"
+          ><img
+            src="./assets/bikcraft.svg"
+            width="136"
+            height="32"
+            alt="Bikcraft"
+        /></a>
 
         <nav aria-label="primary">
           <ul class="header-menu color-0 ty-1-m">
@@ -40,15 +47,21 @@
             para você. Explore o mundo na sua velocidade.
           </p>
 
-          <a class="button color-0" href="./bicletas.html">Escolha a sua</a>
+          <a class="button color-0" href="./bicycles.html">Escolha a sua</a>
         </div>
 
-        <div>
+        <picture>
+          <source
+            media="(max-width: 800px)"
+            srcset="./assets/bicicletas/nimbus.jpg"
+          />
           <img
             src="./assets/fotos/introducao.jpg"
             alt="Bicicleta elétrica preta."
+            width="1280"
+            height="1600"
           />
-        </div>
+        </picture>
       </div>
     </main>
 
@@ -63,6 +76,8 @@
             <img
               src="./assets/bicicletas/magic-home.jpg"
               alt="Bicicleta elétrica preta."
+              width="920"
+              height="1040"
             />
             <h3 class="ty-1-xl">Magic Might</h3>
             <span class="ty-2-m color-8">R$ 2.499,00</span>
@@ -74,6 +89,8 @@
             <img
               src="./assets/bicicletas/nimbus-home.jpg"
               alt="Bicicleta elétrica preta."
+              width="920"
+              height="1040"
             />
             <h3 class="ty-1-xl">Nimbus Might</h3>
             <span class="ty-2-m color-8">R$ 4.999,00</span>
@@ -85,6 +102,8 @@
             <img
               src="./assets/bicicletas/nebula-home.jpg"
               alt="Bicicleta elétrica preta."
+              width="920"
+              height="1040"
             />
             <h3 class="ty-1-xl">Nebula Might</h3>
             <span class="ty-2-m color-8">R$ 3.999,00</span>
@@ -114,7 +133,12 @@
 
           <div class="technology-benefits">
             <div>
-              <img src="./assets/icones/eletrica.svg" alt="" />
+              <img
+                src="./assets/icones/eletrica.svg"
+                alt=""
+                width="24"
+                height="24"
+              />
               <h3 class="ty-1-m color-0">Motor Elétrico</h3>
               <p class="ty-2-s color-5">
                 Toda Bikcraft é equipada com um motor elétrico que possui
@@ -123,7 +147,12 @@
               </p>
             </div>
             <div>
-              <img src="./assets/icones/rastreador.svg" alt="" />
+              <img
+                src="./assets/icones/rastreador.svg"
+                alt=""
+                width="24"
+                height="24"
+              />
               <h3 class="ty-1-m color-0">Rastreador</h3>
               <p class="ty-2-s color-5">
                 Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
@@ -134,7 +163,12 @@
         </div>
 
         <div class="technology-image">
-          <img src="./assets/fotos/tecnologia.jpg" alt="" />
+          <img
+            src="./assets/fotos/tecnologia.jpg"
+            alt=""
+            width="1200"
+            height="1920"
+          />
         </div>
       </div>
     </article>
@@ -145,14 +179,14 @@
       </h2>
 
       <ul>
-        <li><img src="./assets/parceiros/caravan.svg" alt="caravan" /></li>
-        <li><img src="./assets/parceiros/dogs.svg" alt="dogs" /></li>
-        <li><img src="./assets/parceiros/flexblog.svg" alt="flexblog" /></li>
-        <li><img src="./assets/parceiros/handel.svg" alt="handel" /></li>
-        <li><img src="./assets/parceiros/lescone.svg" alt="lescone" /></li>
-        <li><img src="./assets/parceiros/ranek.svg" alt="ranek" /></li>
-        <li><img src="./assets/parceiros/surfbot.svg" alt="surfbot" /></li>
-        <li><img src="./assets/parceiros/wildbeast.svg" alt="wildbeast" /></li>
+        <li><img src="./assets/parceiros/caravan.svg" alt="Caravan" width="140" height="38"></li>
+        <li><img src="./assets/parceiros/ranek.svg" alt="Ranek" width="149" height="36"></li>
+        <li><img src="./assets/parceiros/handel.svg" alt="Handel" width="140" height="50"></li>
+        <li><img src="./assets/parceiros/dogs.svg" alt="Dogs" width="152" height="39"></li>
+        <li><img src="./assets/parceiros/lescone.svg" alt="LeScone" width="208" height="41"></li>
+        <li><img src="./assets/parceiros/flexblog.svg" alt="FlexBlog" width="165" height="38"></li>
+        <li><img src="./assets/parceiros/wildbeast.svg" alt="Wildbeast" width="196" height="34"></li>
+        <li><img src="./assets/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>
       </ul>
     </section>
 
@@ -161,6 +195,8 @@
         <img
           src="./assets/fotos/depoimento.jpg"
           alt="Pessoa pedalando uma bicicleta Bikcraft"
+          width="1560"
+          height="1360"
         />
       </div>
 
@@ -221,7 +257,7 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./assets/bikcraft.svg" alt="Bikcraft" />
+        <img src="./assets/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
 
         <div class="footer-contact">
           <h3 class="ty-2-l-b color-0">Contato</h3>
@@ -239,13 +275,13 @@
 
           <div class="footer-social">
             <a href="">
-              <img src="./assets/redes/facebook.svg" alt="facebook" />
+              <img src="./assets/redes/facebook.svg" width="32" height="32" alt="facebook" />
             </a>
             <a href="">
-              <img src="./assets/redes/instagram.svg" alt="instagram" />
+              <img src="./assets/redes/instagram.svg" width="32" height="32" alt="instagram" />
             </a>
             <a href="">
-              <img src="./assets/redes/youtube.svg" alt="youtube" />
+              <img src="./assets/redes/youtube.svg" width="32" height="32" alt="youtube" />
             </a>
           </div>
         </div>
