--- a/bikcraft-final/contact.html
+++ b/bikcraft-final/contact.html
@@ -7,7 +7,7 @@
 
     <meta name="decription" content="Contato." />
 
-      <link rel="preload" href="./styles/index.css" as="style">
+    <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
 
@@ -207,5 +207,7 @@
         </p>
       </div>
     </footer>
+    
+    <script src="./js/script.js"></script>
   </body>
 </html>
