--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -179,14 +179,70 @@
       </h2>
 
       <ul>
-        <li><img src="./assets/parceiros/caravan.svg" alt="Caravan" width="140" height="38"></li>
-        <li><img src="./assets/parceiros/ranek.svg" alt="Ranek" width="149" height="36"></li>
-        <li><img src="./assets/parceiros/handel.svg" alt="Handel" width="140" height="50"></li>
-        <li><img src="./assets/parceiros/dogs.svg" alt="Dogs" width="152" height="39"></li>
-        <li><img src="./assets/parceiros/lescone.svg" alt="LeScone" width="208" height="41"></li>
-        <li><img src="./assets/parceiros/flexblog.svg" alt="FlexBlog" width="165" height="38"></li>
-        <li><img src="./assets/parceiros/wildbeast.svg" alt="Wildbeast" width="196" height="34"></li>
-        <li><img src="./assets/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>
+        <li>
+          <img
+            src="./assets/parceiros/caravan.svg"
+            alt="Caravan"
+            width="140"
+            height="38"
+          />
+        </li>
+        <li>
+          <img
+            src="./assets/parceiros/ranek.svg"
+            alt="Ranek"
+            width="149"
+            height="36"
+          />
+        </li>
+        <li>
+          <img
+            src="./assets/parceiros/handel.svg"
+            alt="Handel"
+            width="140"
+            height="50"
+          />
+        </li>
+        <li>
+          <img
+            src="./assets/parceiros/dogs.svg"
+            alt="Dogs"
+            width="152"
+            height="39"
+          />
+        </li>
+        <li>
+          <img
+            src="./assets/parceiros/lescone.svg"
+            alt="LeScone"
+            width="208"
+            height="41"
+          />
+        </li>
+        <li>
+          <img
+            src="./assets/parceiros/flexblog.svg"
+            alt="FlexBlog"
+            width="165"
+            height="38"
+          />
+        </li>
+        <li>
+          <img
+            src="./assets/parceiros/wildbeast.svg"
+            alt="Wildbeast"
+            width="196"
+            height="34"
+          />
+        </li>
+        <li>
+          <img
+            src="./assets/parceiros/surfbot.svg"
+            alt="Surfbot"
+            width="200"
+            height="49"
+          />
+        </li>
       </ul>
     </section>
 
@@ -257,7 +313,12 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./assets/bikcraft.svg" width="136" height="32" alt="Bikcraft" />
+        <img
+          src="./assets/bikcraft.svg"
+          width="136"
+          height="32"
+          alt="Bikcraft"
+        />
 
         <div class="footer-contact">
           <h3 class="ty-2-l-b color-0">Contato</h3>
@@ -275,13 +336,28 @@
 
           <div class="footer-social">
             <a href="">
-              <img src="./assets/redes/facebook.svg" width="32" height="32" alt="facebook" />
+              <img
+                src="./assets/redes/facebook.svg"
+                width="32"
+                height="32"
+                alt="facebook"
+              />
             </a>
             <a href="">
-              <img src="./assets/redes/instagram.svg" width="32" height="32" alt="instagram" />
+              <img
+                src="./assets/redes/instagram.svg"
+                width="32"
+                height="32"
+                alt="instagram"
+              />
             </a>
             <a href="">
-              <img src="./assets/redes/youtube.svg" width="32" height="32" alt="youtube" />
+              <img
+                src="./assets/redes/youtube.svg"
+                width="32"
+                height="32"
+                alt="youtube"
+              />
             </a>
           </div>
         </div>
@@ -304,5 +380,7 @@
         </p>
       </div>
     </footer>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
