feature: adding pre selected

--- a/bikcraft-final/insurance.html
+++ b/bikcraft-final/insurance.html
@@ -51,7 +51,7 @@
             <li>Cobertura estadual</li>
           </ul>
 
-          <a href="./budget.html" class="button second">Inscreva-se </a>
+          <a href="./budget.html?type=insurance&product=silver" class="button second">Inscreva-se </a>
         </div>
 
         <div class="insurance-item">
@@ -70,7 +70,7 @@
             <li>Acesso ao Clube Bikcraft</li>
           </ul>
 
-          <a href="./budget.html" class="button">Inscreva-se </a>
+          <a href="./budget.html?type=insurance&product=gold" class="button">Inscreva-se </a>
         </div>
       </div>
     </main>
