--- a/bikcraft-final/bicycles/nebula.html
+++ b/bikcraft-final/bicycles/nebula.html
@@ -35,9 +35,9 @@
 
       <div class="bicycle container">
         <div class="bicycle-images">
-          <img src="../assets/bicicleta/nimbus3.jpg" alt="" />
-          <img src="../assets/bicicleta/nimbus1.jpg" alt="" />
-          <img src="../assets/bicicleta/nimbus2.jpg" alt="" />
+          <img src="../assets/bicicleta/nimbus3.jpg" alt="Bicicleta 1" />
+          <img src="../assets/bicicleta/nimbus1.jpg" alt="Bicicleta 2" />
+          <img src="../assets/bicicleta/nimbus2.jpg" alt="Bicicleta 3" />
         </div>
 
         <div class="bicycle-content">
@@ -47,7 +47,7 @@
             velocidade.
           </p>
           <div class="bicycle-buy">
-            <a class="button" href="../budget.html">Comprar Agora</a>
+            <a class="button" href="../budget.html?type=bikcraft&product=nebula">Comprar Agora</a>
             <span class="ty-1-xs color-6"
               ><img src="../assets/icones/entrega.svg" alt="" /> entrega em 5
               dias</span
