--- a/bikcraft-final/insurance.html
+++ b/bikcraft-final/insurance.html
@@ -7,7 +7,7 @@
 
     <meta name="decription" content="Seguros." />
 
-      <link rel="preload" href="./styles/index.css" as="style">
+    <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
 
@@ -51,7 +51,11 @@
             <li>Cobertura estadual</li>
           </ul>
 
-          <a href="./budget.html?type=insurance&product=silver" class="button second">Inscreva-se </a>
+          <a
+            href="./budget.html?type=insurance&product=silver"
+            class="button second"
+            >Inscreva-se
+          </a>
         </div>
 
         <div class="insurance-item">
@@ -70,7 +74,9 @@
             <li>Acesso ao Clube Bikcraft</li>
           </ul>
 
-          <a href="./budget.html?type=insurance&product=gold" class="button">Inscreva-se </a>
+          <a href="./budget.html?type=insurance&product=gold" class="button"
+            >Inscreva-se
+          </a>
         </div>
       </div>
     </main>
@@ -141,48 +147,96 @@
 
       <dl>
         <div>
-          <dt class="ty-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="ty-2-s color-9">
+          <dt>
+            <button
+              class="ty-1-m-b"
+              aria-expanded="true"
+              aria-controls="question-1"
+            >
+              Qual forma de pagamento vocês aceitam?
+            </button>
+          </dt>
+          <dd class="ty-2-s color-9 active" id="question-1">
             Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
             pagamentos à vista também aceitarmos PIX e Boleto através do
             PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="ty-1-m-b">Como posso entrar em contato?</dt>
-          <dd class="ty-2-s color-9">
+          <dt>
+            <button
+              class="ty-1-m-b"
+              aria-expanded="false"
+              aria-controls="question-2"
+            >
+              Como posso entrar em contato?
+            </button>
+          </dt>
+          <dd id="question-2" class="ty-2-s color-9">
             Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
             pagamentos à vista também aceitarmos PIX e Boleto através do
             PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="ty-1-m-b">Vocês possuem algum desconto?</dt>
-          <dd class="ty-2-s color-9">
+          <dt>
+            <button
+              class="ty-1-m-b"
+              aria-expanded="false"
+              aria-controls="question-3"
+            >
+              Vocês possuem algum desconto?
+            </button>
+          </dt>
+          <dd id="question-3" class="ty-2-s color-9">
             Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
             pagamentos à vista também aceitarmos PIX e Boleto através do
             PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="ty-1-m-b">Qual a garantia que possuo?</dt>
-          <dd class="ty-2-s color-9">
+          <dt>
+            <button
+              class="ty-1-m-b"
+              aria-expanded="false"
+              aria-controls="question-4"
+            >
+              Qual a garantia que possuo?
+            </button>
+          </dt>
+          <dd id="question-4" class="ty-2-s color-9">
             Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
             pagamentos à vista também aceitarmos PIX e Boleto através do
             PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="ty-1-m-b">Posso parcelar no boleto?</dt>
-          <dd class="ty-2-s color-9">
+          <dt>
+            <button
+              class="ty-1-m-b"
+              aria-expanded="false"
+              aria-controls="question-5"
+            >
+              Posso parcelar no boleto?
+            </button>
+          </dt>
+          <dd id="question-5" class="ty-2-s color-9">
             Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
             pagamentos à vista também aceitarmos PIX e Boleto através do
             PagSeguro.
           </dd>
         </div>
         <div>
-          <dt class="ty-1-m-b">Quantas trocas posso fazer ao ano?</dt>
-          <dd class="ty-2-s color-9">
+          <dt>
+            <button
+              class="ty-1-m-b"
+              aria-expanded="false"
+              aria-controls="question-6"
+            >
+              Quantas trocas posso fazer ao ano?
+            </button>
+          </dt>
+          <dd id="question-6" class="ty-2-s color-9">
             Aceitamos pagamentos parcelados em todos os cartões de crédito. Para
             pagamentos à vista também aceitarmos PIX e Boleto através do
             PagSeguro.
@@ -240,6 +294,6 @@
         </p>
       </div>
     </footer>
-  <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
