fix: validate js

--- a/bikcraft-final/bicycles/magic.html
+++ b/bikcraft-final/bicycles/magic.html
@@ -8,6 +8,7 @@
     <meta name="decription" content="Magic." />
 
     <link rel="stylesheet" href="../styles/index.css" />
+  <script>document.documentElement.classList.add("js");</script>
   </head>
 
   <body id="bicycle">
