--- a/bikcraft-final/contact.html
+++ b/bikcraft-final/contact.html
@@ -9,6 +9,7 @@
 
     <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
+  <script>document.documentElement.classList.add("js");</script>
   </head>
 
   <body id="contact">
