--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -12,6 +12,10 @@
 
     <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body>
@@ -47,7 +51,12 @@
             para você. Explore o mundo na sua velocidade.
           </p>
 
-          <a class="button color-0 fadeInDown" href="./bicycles.html" data-anime="400">Escolha a sua</a>
+          <a
+            class="button color-0 fadeInDown"
+            href="./bicycles.html"
+            data-anime="400"
+            >Escolha a sua</a
+          >
         </div>
 
         <picture data-anime="500">
