feature: fav icon

--- a/bikcraft-final/bicycles.html
+++ b/bikcraft-final/bicycles.html
@@ -7,9 +7,13 @@
 
     <meta name="decription" content="Bicicletas." />
 
-      <link rel="preload" href="./styles/index.css" as="style">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
-  <script>document.documentElement.classList.add("js");</script>
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="bicycles">
@@ -72,9 +76,7 @@
             </li>
           </ul>
 
-          <a href="./bicycles/nimbus.html" class="button send"
-            >Mais sobre</a
-          >
+          <a href="./bicycles/nimbus.html" class="button send">Mais sobre</a>
         </div>
       </div>
 
@@ -114,9 +116,7 @@
               </li>
             </ul>
 
-            <a href="./bicycles/magic.html" class="button send"
-              >Mais sobre</a
-            >
+            <a href="./bicycles/magic.html" class="button send">Mais sobre</a>
           </div>
         </div>
       </div>
@@ -156,9 +156,7 @@
             </li>
           </ul>
 
-          <a href="./bicycles/nebula.html" class="button send"
-            >Mais sobre</a
-          >
+          <a href="./bicycles/nebula.html" class="button send">Mais sobre</a>
         </div>
       </div>
     </main>
@@ -212,6 +210,6 @@
         </p>
       </div>
     </footer>
-  <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
