--- a/bikcraft-final/bicycles/nimbus.html
+++ b/bikcraft-final/bicycles/nimbus.html
@@ -7,8 +7,12 @@
 
     <meta name="decription" content="Nimbus." />
 
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="../styles/index.css" />
-  <script>document.documentElement.classList.add("js");</script>
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="bicycle">
@@ -48,7 +52,9 @@
             velocidade.
           </p>
           <div class="bicycle-buy">
-            <a class="button" href="../budget.html?type=bikcraft&product=nimbus">Comprar Agora</a>
+            <a class="button" href="../budget.html?type=bikcraft&product=nimbus"
+              >Comprar Agora</a
+            >
             <span class="ty-1-xs color-6"
               ><img src="../assets/icones/entrega.svg" alt="" /> entrega em 5
               dias</span
