--- a/bikcraft-final/budget.html
+++ b/bikcraft-final/budget.html
@@ -6,10 +6,14 @@
     <title>Bikcraft - Orçamento</title>
 
     <meta name="decription" content="Orçamento." />
-
-      <link rel="preload" href="./styles/index.css" as="style">
+    
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
-  <script>document.documentElement.classList.add("js");</script>
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="budget">
@@ -52,7 +56,7 @@
 
             <input type="radio" name="product" value="nimbus" id="nimbus" />
             <label for="nimbus">Nimbus Stark <span>R$ 4.999,00</span></label>
-            
+
             <div class="budget-details">
               <ul class="ty-1-xs color-8">
                 <li>
@@ -102,7 +106,7 @@
             <input type="radio" name="product" value="nebula" id="nebula" />
             <label for="nebula">Nebula Cosmic <span>R$ 3.999,00</span></label>
             <div class="budget-details">
-              <ul class="ty-1-xs color-8"> 
+              <ul class="ty-1-xs color-8">
                 <li>
                   <img src="./assets/icones/eletrica.svg" alt="" />
                   Motor Elétrico
@@ -119,8 +123,11 @@
                   <img src="./assets/icones/rastreador.svg" alt="" />Rastreador
                 </li>
               </ul>
-  
-              <img src="./assets/bicicletas/nebula.jpg" alt="Bicicleta Branca">
+
+              <img
+                src="./assets/bicicletas/nebula.jpg"
+                alt="Bicicleta Branca"
+              />
             </div>
           </div>
 
@@ -249,6 +256,6 @@
         </p>
       </div>
     </footer>
-  <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
