--- a/bikcraft-final/contact.html
+++ b/bikcraft-final/contact.html
@@ -7,9 +7,13 @@
 
     <meta name="decription" content="Contato." />
 
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
     <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
-  <script>document.documentElement.classList.add("js");</script>
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="contact">
@@ -208,7 +212,7 @@
         </p>
       </div>
     </footer>
-    
+
     <script src="./js/script.js"></script>
   </body>
 </html>
