--- a/bikcraft-final/terms.html
+++ b/bikcraft-final/terms.html
@@ -7,9 +7,13 @@
 
     <meta name="decription" content="Termos e Condições." />
 
-      <link rel="preload" href="./styles/index.css" as="style">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
-  <script>document.documentElement.classList.add("js");</script>
+    
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="terms">
@@ -123,6 +127,6 @@
         </p>
       </div>
     </footer>
-  <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
