--- a/bikcraft-final/index.html
+++ b/bikcraft-final/index.html
@@ -10,6 +10,7 @@
       content="Bicicletas elétricas de alta procisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
 
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
     <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
 
