--- a/bikcraft-final/insurance.html
+++ b/bikcraft-final/insurance.html
@@ -7,9 +7,13 @@
 
     <meta name="decription" content="Seguros." />
 
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
     <link rel="preload" href="./styles/index.css" as="style" />
     <link rel="stylesheet" href="./styles/index.css" />
-  <script>document.documentElement.classList.add("js");</script>
+    
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="insurance">
