feature: using min css

--- a/bikcraft-final/budget.html
+++ b/bikcraft-final/budget.html
@@ -6,10 +6,10 @@
     <title>Bikcraft - Orçamento</title>
 
     <meta name="decription" content="Orçamento." />
-    
+
     <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
-    <link rel="preload" href="./styles/index.css" as="style" />
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="preload" href="./styles/style.min.css" as="style" />
+    <link rel="stylesheet" href="./styles/style.min.css" />
 
     <script>
       document.documentElement.classList.add("js");
