--- a/bikcraft-final/contact.html
+++ b/bikcraft-final/contact.html
@@ -8,8 +8,8 @@
     <meta name="decription" content="Contato." />
 
     <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
-    <link rel="preload" href="./styles/index.css" as="style" />
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="preload" href="./styles/style.min.css" as="style" />
+    <link rel="stylesheet" href="./styles/style.min.css" />
 
     <script>
       document.documentElement.classList.add("js");
