--- a/bikcraft-final/bicycles/nebula.html
+++ b/bikcraft-final/bicycles/nebula.html
@@ -8,7 +8,7 @@
     <meta name="decription" content="Nebula." />
 
     <link rel="icon" href="../favicon.svg" type="image/svg+xml" />
-    <link rel="stylesheet" href="../styles/index.css" />
+    <link rel="stylesheet" href="../styles/style.min.css" />
 
     <script>
       document.documentElement.classList.add("js");
