--- a/bikcraft-final/terms.html
+++ b/bikcraft-final/terms.html
@@ -8,9 +8,9 @@
     <meta name="decription" content="Termos e Condições." />
 
     <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
-    <link rel="preload" href="./styles/index.css" as="style" />
-    <link rel="stylesheet" href="./styles/index.css" />
-    
+    <link rel="preload" href="./styles/style.min.css" as="style" />
+    <link rel="stylesheet" href="./styles/style.min.css" />
+
     <script>
       document.documentElement.classList.add("js");
     </script>
