feat: content styles

--- a/CSS Grid Layout/index.html
+++ b/CSS Grid Layout/index.html
@@ -58,21 +58,21 @@
           </div>
         </div>
 
+        <p class="col-wide">
+          É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
+          cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos
+          genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
+        </p>
+
+        <img src="./img/wolf1.jpg" alt="Wolf 1" class="imagem-1" />
+
         <p>
           É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
           cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos
           genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
         </p>
 
-        <img src="./img/wolf1.jpg" alt="Wolf 1" />
-
-        <p>
-          É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
-          cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos
-          genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
-        </p>
-
-        <img src="./img/wolf2.jpg" alt="Wolf 2" />
+        <img src="./img/wolf2.jpg" alt="Wolf 2" class="imagem-2" />
 
         <p>
           O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a
@@ -89,7 +89,7 @@
         </p>
 
         <blockquote class="citacao">
-          <p>
+          <p class="col-wide">
             “Há algo no uivar do lobo que tira um homem do aqui e agora e o
             transporta para uma floresta da mente.”
           </p>
@@ -120,7 +120,7 @@
           </p>
         </div>
 
-        <img src="./img/wolf3.jpg" alt="Wolf 3" />
+        <img src="./img/wolf3.jpg" alt="Wolf 3" class="col-wide" />
       </main>
 
       <aside class="anuncios">
