--- a/JavaScript/iniciante/index.html
+++ b/JavaScript/iniciante/index.html
@@ -8,8 +8,23 @@
     <title>Variaveis</title>
   </head>
   <body>
+    <!-- <script src="dist/clipboard.min.js"></script> -->
     <script src="./script.js"></script>
 
     <div class="test"></div>
+
+    <a href="#" class="button">Botão</a>
+
+    <!-- Target -->
+    <textarea id="bar">Mussum ipsum cacilds...</textarea>
+
+    <!-- Trigger -->
+    <button
+      class="btn"
+      data-clipboard-action="cut"
+      data-clipboard-target="#bar"
+    >
+      Cut to clipboard
+    </button>
   </body>
 </html>
