feat: CSSanimals project part 1

--- a/JavaScript/animaisFantasticos/index.html
+++ b/JavaScript/animaisFantasticos/index.html
@@ -7,12 +7,12 @@
     <title>Animais Fantásticos</title>
   </head>
   <body>
-    <nav>
+    <nav class="menu">
       <ul>
-        <li><a href="#animais"></a>Animais</li>
-        <li><a href="#faq"></a>FAQ</li>
-        <li><a href="#contato"></a>Contato</li>
-        <li><a href="https://andrelcarvalho.netlify.app/">Dev →</a> ev</li>
+        <li><a href="#animais">Animais</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#contato">Contato</a></li>
+        <li><a href="https://andrelcarvalho.netlify.app/">Dev →</a></li>
       </ul>
     </nav>
 
