feat: CSSanimals project part 2

--- a/JavaScript/animaisFantasticos/index.html
+++ b/JavaScript/animaisFantasticos/index.html
@@ -19,7 +19,7 @@
     <section class="grid-section animais" id="animais">
       <h1 class="titulo">Animais Fantásticos</h1>
 
-      <ul>
+      <ul class="animais-lista">
         <li>
           <img src="./assets/imagem1.jpg" />
         </li>
@@ -203,7 +203,7 @@
     <section class="grid-section contato" id="contato">
       <h1 class="titulo">Contato</h1>
 
-      <div>
+      <div class="mapa">
         <img src="./assets/mapa.png" alt="Mapa" />
       </div>
 
