--- a/JavaScript/animaisFantasticos/index.html
+++ b/JavaScript/animaisFantasticos/index.html
@@ -224,6 +224,6 @@
     </footer>
 
     <script src="./script.js"></script>
-    <!-- <script src="./exercises.js"></script> -->
+    <script src="./exercises.js"></script>
   </body>
 </html>
