feat: 0510 Anima Números

--- a/JavaScript/fantasticAnimals/index.html
+++ b/JavaScript/fantasticAnimals/index.html
@@ -220,6 +220,38 @@
         </dl>
       </section>
 
+      <section class="grid-section numbers" data-anime="scroll">
+        <h1 class="titulo">Números</h1>
+
+        <div class="numbers-grid">
+          <div class="numbers-animal">
+            <h3>Lobos</h3>
+            <span data-number>4874</span>
+          </div>
+        </div>
+
+        <div class="numbers-grid">
+          <div class="numbers-animal">
+            <h3>Raposas</h3>
+            <span data-number>5374</span>
+          </div>
+        </div>
+
+        <div class="numbers-grid">
+          <div class="numbers-animal">
+            <h3>Esquilos</h3>
+            <span data-number>12300</span>
+          </div>
+        </div>
+
+        <div class="numbers-grid">
+          <div class="numbers-animal">
+            <h3>Ursos</h3>
+            <span data-number>231</span>
+          </div>
+        </div>
+      </section>
+
       <section class="grid-section contato" data-anime="scroll" id="contato">
         <h1 class="titulo">Contato</h1>
 
