--- a/JavaScript/exercicies/index.html
+++ b/JavaScript/exercicies/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>exercicies</title>
+
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <section>
@@ -26,6 +28,8 @@
         Os lobos são capazes de percorrer longas distâncias com uma velocidade
         média de 10 quilômetros por hora e são conhecidos por.
       </p>
+
+      <button></button>
     </section>
 
     <script src="./script.js"></script>
