feat: 0806 Loops e Iterable

--- a/JavaScript/exercicies/index.html
+++ b/JavaScript/exercicies/index.html
@@ -29,6 +29,12 @@
         média de 10 quilômetros por hora e são conhecidos por.
       </p>
 
+      <ul>
+        <li>Home</li>
+        <li>Contatos</li>
+        <li>Login</li>
+        <li>Configurações</li>
+      </ul>
       <button></button>
     </section>
 
