--- a/JavaScript/automation/index.html
+++ b/JavaScript/automation/index.html
@@ -268,7 +268,7 @@
       </div>
     </section>
 
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./main.js"></script>
     <!-- <script src="./modules/exercises.js"></script> -->
   </body>
 </html>
