fix: update config

--- a/react/ac-dogs/index.html
+++ b/react/ac-dogs/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#FFF" />
-    <meta name="description" content="AC Dogs - Rede social para cachorros." />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Website desenvolvido por André Leite Carvalho durante o curso da Origamid"
+    />
 
     <title>AC Dogs</title>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
