feat: 0609 Preencher Lista

--- a/typescript/data/index.html
+++ b/typescript/data/index.html
@@ -17,6 +17,12 @@
           <p id="sum">Total: <span></span></p>
         </div>
 
+        <h3>Formas de pagamentos somadas:</h3>
+        <div id="payment"></div>
+
+        <h3>Soma dos status de pagamento:</h3>
+        <div id="status"></div>
+
         <h2>Dados</h2>
 
         <table id="transactions">
